# buzzpoll

./: README.md
backend/: Cargo.toml  build.gradle.kts  client.go  client_test.go  go.mod  go.sum  server  server.go  settings.gradle.kts
backend/src/: app_state.rs  lib.rs  main.rs  model.rs  server.rs  services.rs
backend/src/main/kotlin/com/buzzpoll/: buzzpoll.kt
backend/src/main/kotlin/com/buzzpoll/formats/: JacksonMessage.kt
backend/src/main/kotlin/com/buzzpoll/model/: Poll.kt  Vote.kt
backend/src/test/kotlin/com/buzzpoll/: buzzpollTest.kt
backend/tests/: integration_test.rs
buzzpoll/: README.md
frontend/: angular.json  package-lock.json  package.json
frontend-old/: package.json
frontend-old/src/components/: Button.svelte
frontend-old/src/lib/stores/: qrcode.js
frontend-old/src/routes/: +page.svelte
frontend-old/src/routes/done/: +page.svelte
frontend-old/src/routes/new/: +page.svelte
frontend/src/: app.html  index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/results/: results.component.html  results.component.ts
frontend/src/app/vote/: vote.component.html  vote.component.ts
frontend/src/routes/: +page.svelte  Model.svelte  New.svelte  Polls.svelte
frontend/src/services/: poll-service.service.ts  websocket.service.ts
frontend/svelte/: package-lock.json  package.json
rust/: Cargo.toml
rust/src/: chat_example_main.rs  main.rs  model.rs  services.rs
svelte/src/: app.html
svelte/src/routes/: +layout.svelte  +page.svelte  New.svelte  Polls.svelte
(+25 files in other folders)
