[package]
name = "buzzpoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.3.0"
actix = "0.13.3"
actix-session = { version = "0.9.0", features = ["cookie-session"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.10.0"
bytestring = "1.3.1"
actix-files = "0.6.5"
rand = "0.8.5"
http = "0.2.12"
actix-cors = "0.7.0"
nanoid = "0.4.0"
